<resources>
    <string name="app_name">NutriAppJava</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>

    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="gender">Gender</string>
    <string name="location">Location</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="target_weight">Target weight</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="units_array">
        <item>grams</item>
        <item>kilograms</item>
        <item>pounds</item>
    </string-array>

    <string-array name="meals_categories">
        <item>Breakfast</item>
        <item>Lunch</item>
        <item>Dinner</item>
    </string-array>


</resources>